--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <meta charset="utf-8" />
-  <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
-
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
     <title>Новая вкладка</title>
+    <style>
+      #app {
+        opacity: 0.3;
+      }
+    </style>
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
