--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
-    <title>Новая вкладка</title>
+    <title data-localize="new_tab_title">New tab</title>
+    <script type="module" src="./src/translate-html.ts"></script>
     <style>
       #app {
         opacity: 0.3;
