feat: set document language

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
     <title data-localize="new_tab_title">New tab</title>
-    <script type="module" src="./src/translate-html.ts"></script>
     <style>
       #app {
         opacity: 0.3;
@@ -14,6 +13,7 @@
 
   <body>
     <div id="app"></div>
+    <script type="module" src="./src/localize-html.ts"></script>
     <script type="module" src="./src/index.tsx"></script>
   </body>
 </html>
