--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <title data-localize="new_tab_title">New tab</title>
     <style>
       #app {
