--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <title data-localize="new_tab_title">New tab</title>
-    <style>
-      #app {
-        opacity: 0.3;
-      }
-    </style>
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="preload" href="./src/components/Fonts/components/Digital7Mono/digital-7mono.woff2" as="font" type="font/woff2" crossorigin="">
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app" style="opacity: 0;"></div>
     <script type="module" src="./src/localize-html.ts"></script>
     <script type="module" src="./src/index.tsx"></script>
   </body>
