style: run prettier

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
     <title data-localize="new_tab_title">New tab</title>
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-    <link rel="preload" href="./src/components/Fonts/components/Digital7Mono/digital-7mono.woff2" as="font" type="font/woff2" crossorigin="">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link
+      rel="preload"
+      href="./src/components/Fonts/components/Digital7Mono/digital-7mono.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin=""
+    />
   </head>
 
   <body>
-    <div id="app" style="opacity: 0;"></div>
+    <div id="app" style="opacity: 0"></div>
     <script type="module" src="./src/localize-html.ts"></script>
     <script type="module" src="./src/index.tsx"></script>
   </body>
